tests: Migrate assertions to assertj